--- a/index.css
+++ b/index.css
@@ -646,15 +646,10 @@ footer {
   }
 
   header {
-    padding: 20px 5vw;
-    margin-top: 5px;
-    margin-bottom: 15px;
-    margin-left: 30px;
-    margin-right: 30px;
-    width: calc(100vw - 60px);
-
-    box-shadow: 0 1px 10px 0 #00000024;
-
+   position: ;
+   margin:0;
+   border-radius: 0;
+   width: 100%;
   }
 
   .footer-content {
@@ -682,7 +677,7 @@ footer {
 
   .mobile-menu {
     position: absolute;
-    top: 120px;
+    top: 60px;
     right: 20px;
     background: rgba(0, 0, 0, 0.236);
     backdrop-filter: blur(10px);
