--- a/index.css
+++ b/index.css
@@ -646,7 +646,8 @@ footer {
   }
 
   header {
-   position: ;
+   position: fixed;
+    top:0;
    margin:0;
    border-radius: 0;
    width: 100%;
