--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
   color: var(--text);
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow-x: auto;
   line-height: 1.6;
   font-size: 16px;
 }
