--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 
 :root {
  --primary: #7421e1;
-    --secondary: #e2f1f0;
+    --secondary: #1c1448;
     --accent: #D8C4B6;
     --text: #ffffff;
 }
