--- a/index.css
+++ b/index.css
@@ -186,7 +186,7 @@ nav a:hover {
 .headline span {
   text-align: center;
   font-family: "Big Shoulders Stencil", sans-serif;
-  color: #c4c1c8;
+  color: #5d516d;
 }
 
 .subtext {
